syntax = "proto3";

package fleet;
option go_package = "fleet/pb";

service FleetService {
  rpc RetrieveAgent(AgentByIDReq) returns (AgentRes) {}
  rpc RetrieveAgentGroup(AgentGroupByIDReq) returns (AgentGroupRes) {}
  rpc RetrieveAgentInfoByChannelID(AgentInfoByChannelIDReq) returns (AgentInfoRes) {}
}

message AgentByIDReq {
  string agentID = 1;
  string ownerID = 2;
}

message AgentRes {
  string id = 1;
  string name = 2;
  string channel = 3;
}

message AgentGroupByIDReq {
  string agentGroupID = 1;
  string ownerID = 2;
}

message AgentGroupRes {
  string id = 1;
  string name = 2;
  string channel = 3;
}

message AgentInfoByChannelIDReq {
  string channel = 1;
}

message AgentInfoRes {
  string ownerID = 1;
  string agentName = 2;
  map<string, string> agentTags = 3;
  //repeated MapFieldEntry map_field = 4;
}

//message MapFieldEntry {
//  key_type key = 1;
//  value_type value = 2;
//}
